<?xml version="1.0"?>
<package>
  <name>provider_power</name>
  <version>0.0.0</version>
  <description>The provider_provider package</description>

  <maintainer email="olavoie9507@gmail.com">olivier</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>lib_atlas</build_depend>
  <build_depend>interface_rs485</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>lib_atlas</run_depend>
  <run_depend>interface_rs485</run_depend>

</package>
