<?xml version="1.0"?>
<package>
  <name>provider_power</name>
  <version>1.1.1</version>
  <description>The provider_provider package</description>

  <maintainer email="olavoie9507@gmail.com">olivier</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sonia_common</run_depend>

</package>
